all working now - forecastcontrols in progress

--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,8 @@
         <script src="bower_components\ng-notifications-bar\dist\ngNotificationsBar.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.12.1/ui-bootstrap-tpls.min.js"></script>
         
-        
+        <!--Utilities-->
+        <script src="Scripts\Utilities.js"></script>
         <!--Services-->
         <script src="Scripts\Services\SessionService.js"></script>
         <!--Factories-->
@@ -26,7 +27,9 @@
         <script src="Scripts\Factories\AuthFactory.js"></script>
         <!--Controllers-->
         <script src="Scripts\Controllers\Authcontroller.js"></script>
+        <script src="Scripts\Controllers\forecastController.js"></script>
         <!--Directives-->
+        <script src="Scripts\Directives\forecastControls.js"></script>
         <script src="Scripts\Directives\stackedbar.js"></script>
         <!--App-->
         <script src="Scripts\Budgeter.js"></script>
