Stacked-bar half working

--- a/Index.html
+++ b/Index.html
@@ -28,6 +28,7 @@
         <!--Controllers-->
         <script src="Scripts\Controllers\Authcontroller.js"></script>
         <script src="Scripts\Controllers\forecastController.js"></script>
+        <script src="Scripts\Controllers\StackedbarController.js"></script>
         <!--Directives-->
         <script src="Scripts\Directives\forecastControls.js"></script>
         <script src="Scripts\Directives\stackedbar.js"></script>
