Problems with sessionService - injector failures

--- a/Index.html
+++ b/Index.html
@@ -22,9 +22,11 @@
         <script src="Scripts\Utilities.js"></script>
         <!--Services-->
         <script src="Scripts\Services\SessionService.js"></script>
+        <script src="Scripts\Services\forecastParamSvc.js"></script>
         <!--Factories-->
-        <script src="Scripts\Factories\ForecastMgr.js"></script>
         <script src="Scripts\Factories\AuthFactory.js"></script>
+        <script src="Scripts\Factories\ForecastMgr.js"></script>
+        
         <!--Controllers-->
         <script src="Scripts\Controllers\Authcontroller.js"></script>
         <script src="Scripts\Controllers\forecastController.js"></script>
@@ -34,9 +36,6 @@
         <script src="Scripts\Directives\stackedbar.js"></script>
         <!--App-->
         <script src="Scripts\Budgeter.js"></script>
-
-        <!--Controllers-->
-
     </head>
     <body>
         <!--Header-->
