transaction item - fix delete function

--- a/Index.html
+++ b/Index.html
@@ -34,6 +34,7 @@
         <script src="Scripts\Directives\forecastControls.js"></script>
         <script src="Scripts\Directives\stackedbar.js"></script>
         <script src="Scripts\Directives\transactionList.js"></script>
+        <script src="Scripts\Directives\transaction.js"></script>
         <!--App-->
         <script src="Scripts\Budgeter.js"></script>
     </head>
