--- a/Index.html
+++ b/Index.html
@@ -35,6 +35,8 @@
         <script src="Scripts\Directives\stackedbar.js"></script>
         <script src="Scripts\Directives\transactionList.js"></script>
         <script src="Scripts\Directives\transaction.js"></script>
+        <script src="Scripts\Directives\transactionValueList.js"></script>
+        <script src="Scripts\Directives\transactionValue.js"></script>
         <!--App-->
         <script src="Scripts\Budgeter.js"></script>
     </head>
