Working on transactionValueEditor

--- a/Index.html
+++ b/Index.html
@@ -24,6 +24,7 @@
         <script src="Scripts\Services\forecastParamSvc.js"></script>
         <script src="Scripts\Factories\transactionMgr.js"></script>
         <script src="Scripts\Factories\transactionValueMgr.js"></script>
+        <script src="Scripts\Services\listOptionsDataSvc.js"></script>
         <!--Factories-->
         <script src="Scripts\Factories\AuthFactory.js"></script>
         <script src="Scripts\Factories\ForecastMgr.js"></script>
@@ -32,11 +33,14 @@
         <script src="Scripts\Controllers\forecastController.js"></script>
         <!--Directives-->
         <script src="Scripts\Directives\forecastControls.js"></script>
+        <script src="Scripts\Directives\headlineItem.js"></script>
         <script src="Scripts\Directives\stackedbar.js"></script>
         <script src="Scripts\Directives\transactionList.js"></script>
         <script src="Scripts\Directives\transaction.js"></script>
+        <script src="Scripts\Directives\transactionEditor.js"></script>
         <script src="Scripts\Directives\transactionValueList.js"></script>
         <script src="Scripts\Directives\transactionValue.js"></script>
+        
         <!--App-->
         <script src="Scripts\Budgeter.js"></script>
     </head>
