transactionValueEditor working just about - date formats still funny, possibly binding

--- a/Index.html
+++ b/Index.html
@@ -40,7 +40,7 @@
         <script src="Scripts\Directives\transactionEditor.js"></script>
         <script src="Scripts\Directives\transactionValueList.js"></script>
         <script src="Scripts\Directives\transactionValue.js"></script>
-        
+        <script src="Scripts\Directives\transactionValueEditor.js"></script>
         <!--App-->
         <script src="Scripts\Budgeter.js"></script>
     </head>
