More working... can't get ID down to tv editor

--- a/Index.html
+++ b/Index.html
@@ -21,6 +21,7 @@
         <script src="Scripts\Utilities.js"></script>
         <!--Services-->
         <script src="Scripts\Services\SessionService.js"></script>
+        <script src="Scripts\Services\apiFormatSvc.js"></script>
         <script src="Scripts\Services\forecastParamSvc.js"></script>
         <script src="Scripts\Factories\transactionMgr.js"></script>
         <script src="Scripts\Factories\transactionValueMgr.js"></script>
