removed lots of compiled js files, trimmed scopes in ng-repeats

--- a/Index.html
+++ b/Index.html
@@ -18,30 +18,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.12.1/ui-bootstrap-tpls.min.js"></script>
         <!--Utilities-->
         <script src="Scripts\Utilities.js"></script>
-        <!--Services-->
-        <script src="Scripts\Services\SessionService.js"></script>
-        <script src="Scripts\Services\apiFormatSvc.js"></script>
-        <script src="Scripts\Services\forecastParamSvc.js"></script>
-        <script src="Scripts\Factories\transactionMgr.js"></script>
-        <script src="Scripts\Factories\transactionValueMgr.js"></script>
-        <script src="Scripts\Services\listOptionsDataSvc.js"></script>
-        <!--Factories-->
-        <script src="Scripts\Factories\AuthFactory.js"></script>
-        <script src="Scripts\Factories\ForecastMgr.js"></script>
-        <!--Controllers-->
-        <script src="Scripts\Controllers\Authcontroller.js"></script>
-        <!--Directives-->
-        <script src="Scripts\Directives\forecastControls.js"></script>
-        <script src="Scripts\Directives\headlineItem.js"></script>
-        <script src="Scripts\Directives\stackedbar.js"></script>
-        <script src="Scripts\Directives\transactionList.js"></script>
-        <script src="Scripts\Directives\transaction.js"></script>
-        <script src="Scripts\Directives\transactionEditor.js"></script>
-        <script src="Scripts\Directives\transactionValueList.js"></script>
-        <script src="Scripts\Directives\transactionValue.js"></script>
-        <script src="Scripts\Directives\transactionValueEditor.js"></script>
         <!--App-->
-        <script src="Scripts\Budgeter.js"></script>
+        <script src="Release\app.js"></script>
+            
     </head>
     
     <body data-ng-app="budgeter">
