--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,7 @@
             </div>
             <!-- Transactions table -->
             <aside id="transactionlist standard-box-shadow" class="col-lg-4 transactionlistcontainer">
-                <transaction-list class="list-group transactionlist"></transaction-list>
+                <transaction-list class="transactionlist"></transaction-list>
             </aside>
         </main>
     </body>
