--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
         <script src="Scripts\Angular\angular-cookies.min.js"></script>
         <script src="Scripts\Angular\angular-animate.min.js"></script>
         <!--3rd party Dependencies-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
+        <script src="node_modules\d3\d3.min.js" charset="utf-8"></script>
         <script src="Scripts\3rdParty\angular-notify.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.12.1/ui-bootstrap-tpls.min.js"></script>
         <!--App-->
